[tool.poetry]
name = "pyCubes"
version = "0.3.1"
description = "Library for creating servers and clients Minecraft Java Edition"
authors = ["Dmitry Davis <dmitrydavis@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DavisDmitry/pyCubes"
documentation = "https://pycubes.dmitrydavis.xyz"
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
packages = [{include="cubes"}]

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^3.4.0"
nbtlib = "2.0.4"
ujson = {version = "^4.3.0", optional = true, extras = ["fast"]}
uvloop = {version = "^0.16.0", optional = true, extras = ["fast"]}
trio = {version = "^0.19.0", optional = true, extras = ["trio"]}
mkdocs-material = {version = "^7.3.6", optional = true}
mkdocs-static-i18n = {version = ">=0.21,<0.23", optional = true}
lazydocs = {version = "^0.4.8", optional = true}
pydocstyle = {version = "^6.1.1", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.11b1"
trio = "^0.19.0"
flake8 = "^4.0.1"
flake8-annotations-complexity = "^0.0.6"
flake8-annotations-coverage = "^0.0.5"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.9.2"
isort = "^5.9.3"
pydocstyle = "^6.1.1"
pylint = "^2.12.1"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-cov = "^3.0.0"

[tool.poetry.extras]
docs = ["mkdocs-material", "mkdocs-static-i18n", "lazydocs", "pydocstyle"]

[tool.black]
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.message_control]
disable = ["C0112", "C0114", "C0115", "C0116"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
